--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link href="/public/output.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="sticky top-0 w-full backdrop-blur-lg z-10">
+    <header class="sticky top-0 w-full backdrop-blur-lg z-10 px-4">
       <div class="container mx-auto py-5 flex justify-between items-center">
         <div class="flex items-center gap-3">
           <img
